[package]
name = "telegram-send-msg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
reqwest = { version = "0.12.9", default-features = false,  features = ["json", "rustls-tls", "blocking"] }

# Optional override for openssl-sys
openssl-sys = { version = "0", optional = true }
hyper-tls = { version = "0", optional = true }